@@ -10,6 +10,7 @@
 * removed dependency on svgcanvas.svg, now created in JavaScript
 * added Select tool
 * using jQuery hosted by Google instead of local version
+* allow dragging of elements
 
 2.0 - June 03, 2009
 ------------------
